checkpoint sorted results

--- a/sandbox/bench-new.ipynb
+++ b/sandbox/bench-new.ipynb
@@ -47,6 +47,52 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "c29050ce-6d0a-4337-a1d6-6af2bd652049",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "344783\n"
+     ]
+    }
+   ],
+   "source": [
+    "# previous\n",
+    "anjl.rapid_nj(small_D);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88278dce-99ef-4811-9b33-ec08bc52ba4b",
+   "metadata": {},
+   "source": [
+    "344783"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9b85dfd1-9e71-4c4b-a02a-b144c0cdafae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "340901\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new\n",
+    "anjl.rapid_nj(small_D);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
    "metadata": {},
    "outputs": [
@@ -54,12 +100,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.01 ms ± 282 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.95 ms ± 363 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
+    "# previous\n",
     "anjl.rapid_nj(small_D)"
    ]
   },
@@ -73,7 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.82 ms ± 263 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.79 ms ± 165 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -92,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -102,7 +149,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,6 +163,52 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "1f6c311c-3eb1-4a7e-86a0-1b612a7e229d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3750287\n"
+     ]
+    }
+   ],
+   "source": [
+    "# previous\n",
+    "anjl.rapid_nj(medium_D);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83c2b2bf-ed9a-4809-a412-a2ffe89552de",
+   "metadata": {},
+   "source": [
+    "3750287"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e72af592-1050-4b79-ae2f-d55f4e0f5992",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3811373\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new\n",
+    "anjl.rapid_nj(medium_D);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -123,7 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "44 ms ± 2.82 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "41.2 ms ± 1.18 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -142,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.1 ms ± 1.51 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "23.9 ms ± 2.61 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -161,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -171,7 +264,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,6 +278,52 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "fe4a86fd-3879-4b76-a46b-81a55ee2a702",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "681823586\n"
+     ]
+    }
+   ],
+   "source": [
+    "# previous\n",
+    "anjl.rapid_nj(large_D);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24618c54-6dba-49f4-a544-9a40ec02ad29",
+   "metadata": {},
+   "source": [
+    "681823586"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f9d663d5-23e9-4f04-b5dd-42f22b114978",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "680098968\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new\n",
+    "anjl.rapid_nj(large_D);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -192,7 +331,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.45 s ± 68.7 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "3.32 s ± 24.7 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -230,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -240,7 +379,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,14 +392,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
+   "id": "7357f4d7-f62c-4235-b4dd-3e4c4bffa751",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3463663092017482"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100 * (4164662664 - 4108591049) / 4164662664"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a71e514a92f4541a5e73548f280fcd5",
+       "model_id": "b93725fe868b4bb28168bd590074c83f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,14 +435,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21.3 s, sys: 225 ms, total: 21.5 s\n",
-      "Wall time: 21.4 s\n"
+      "4108591049\n",
+      "CPU times: user 29 s, sys: 284 ms, total: 29.3 s\n",
+      "Wall time: 29.1 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "# new\n",
     "anjl.rapid_nj(xl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6df4caae-92b6-464e-9de4-acdf04df4351",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "076ba52d16684bdeb6259ea84375ea4c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5867 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4164662664\n",
+      "CPU times: user 23.6 s, sys: 249 ms, total: 23.8 s\n",
+      "Wall time: 23.7 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# previous\n",
+    "anjl.rapid_nj(xl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f812be7-d8d6-4cf1-b28a-fddc6f6a1d6d",
+   "metadata": {},
+   "source": [
+    "4164662664"
    ]
   },
   {
