--- a/sandbox/bench-new.ipynb
+++ b/sandbox/bench-new.ipynb
@@ -81,7 +81,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "340901\n"
+      "i 163 s 50 node_i 216 node_j 216 d inf\n",
+      "nodes_sorted[i] [214 200 209 203 206 182 181 118 124 186 132  82  93 155 121  23  46 122\n",
+      " 153 141  11 158  39 108  90  31  85 172   5  92 109  14  94 112 178 138\n",
+      "  91  89 114 119  73  48 143  29 180  19 162  75 113  58 216 127  85 185\n",
+      " 172  32   5  92 109  14  94 112 178  44 138 103 146 115  87  91  89 114\n",
+      "  84   9 119  45  67  99   2  30  73]\n",
+      "D_sorted[i] [14.   15.   19.25 20.   24.   25.5  27.25 28.5  28.5  29.75 30.   30.\n",
+      " 30.   30.   31.   31.   32.   32.   33.   33.5  34.5  34.5  34.5  35.\n",
+      " 35.   35.5  35.5  36.   36.5  36.5  36.5  37.   37.   37.   37.   37.5\n",
+      " 39.   39.   39.   39.   39.5  40.   40.5  41.   41.5  42.5  43.   43.\n",
+      " 43.5  48.     inf 35.5  35.5  35.75 36.   36.   36.5  36.5  36.5  37.\n",
+      " 37.   37.   37.   37.5  37.5  37.5  38.5  38.5  38.5  39.   39.   39.\n",
+      " 39.   39.   39.   39.   39.   39.5  39.5  39.5  39.5 ]\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# new\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43manjl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrapid_nj\u001b[49m\u001b[43m(\u001b[49m\u001b[43msmall_D\u001b[49m\u001b[43m)\u001b[49m;\n",
+      "File \u001b[0;32m~/github/alimanfoo/anjl/anjl/_rapid.py:111\u001b[0m, in \u001b[0;36mrapid_nj\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m    102\u001b[0m         nodes_sorted, D_sorted \u001b[38;5;241m=\u001b[39m rapid_gc(\n\u001b[1;32m    103\u001b[0m             nodes_sorted\u001b[38;5;241m=\u001b[39mnodes_sorted,\n\u001b[1;32m    104\u001b[0m             D_sorted\u001b[38;5;241m=\u001b[39mD_sorted,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    107\u001b[0m             n_remaining\u001b[38;5;241m=\u001b[39mn_remaining,\n\u001b[1;32m    108\u001b[0m         )\n\u001b[1;32m    110\u001b[0m     \u001b[38;5;66;03m# Perform one iteration of the neighbour-joining algorithm.\u001b[39;00m\n\u001b[0;32m--> 111\u001b[0m     u_max, visited \u001b[38;5;241m=\u001b[39m \u001b[43mrapid_iteration\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    112\u001b[0m \u001b[43m        \u001b[49m\u001b[43miteration\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43miteration\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    113\u001b[0m \u001b[43m        \u001b[49m\u001b[43mD\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mD_copy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    114\u001b[0m \u001b[43m        \u001b[49m\u001b[43mD_sorted\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mD_sorted\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    115\u001b[0m \u001b[43m        \u001b[49m\u001b[43mU\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mU\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    116\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnodes_sorted\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnodes_sorted\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    117\u001b[0m \u001b[43m        \u001b[49m\u001b[43mindex_to_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindex_to_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    118\u001b[0m \u001b[43m        \u001b[49m\u001b[43mid_to_index\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mid_to_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    119\u001b[0m \u001b[43m        \u001b[49m\u001b[43mclustered\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mclustered\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    120\u001b[0m \u001b[43m        \u001b[49m\u001b[43mobsolete\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mobsolete\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    121\u001b[0m \u001b[43m        \u001b[49m\u001b[43mZ\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    122\u001b[0m \u001b[43m        \u001b[49m\u001b[43mn_original\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_original\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    123\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdisallow_negative_distances\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdisallow_negative_distances\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    124\u001b[0m \u001b[43m        \u001b[49m\u001b[43mu_max\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mu_max\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    125\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    127\u001b[0m     visits \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m visited\n\u001b[1;32m    129\u001b[0m \u001b[38;5;28mprint\u001b[39m(visits)\n",
+      "File \u001b[0;32m~/github/alimanfoo/anjl/anjl/_rapid.py:278\u001b[0m, in \u001b[0;36mrapid_search\u001b[0;34m()\u001b[0m\n\u001b[1;32m    276\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnodes_sorted[i]\u001b[39m\u001b[38;5;124m\"\u001b[39m, nodes_sorted[i])\n\u001b[1;32m    277\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mD_sorted[i]\u001b[39m\u001b[38;5;124m\"\u001b[39m, D_sorted[i])\n\u001b[0;32m--> 278\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    280\u001b[0m \u001b[38;5;66;03m# Partially calculate q.\u001b[39;00m\n\u001b[1;32m    281\u001b[0m q_partial \u001b[38;5;241m=\u001b[39m coefficient \u001b[38;5;241m*\u001b[39m d \u001b[38;5;241m-\u001b[39m u_i\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
    ],
