Remove self comparisons during update (#29)
* remove self comparisons during update

* rerun bench

* clear outputs

--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.12 ms ± 186 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.26 ms ± 205 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.78 ms ± 134 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.8 ms ± 133 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34.9 ms ± 1.1 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "35.8 ms ± 970 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.6 ms ± 1.19 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "23.9 ms ± 714 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.27 s ± 25.4 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "3.32 s ± 13.2 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.82 s ± 31.5 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "6.92 s ± 15.7 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c774a2aa644404c93bb05e0d0565982",
+       "model_id": "c3a0a15539d742bb80db10818a70d803",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,8 +275,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21.4 s, sys: 236 ms, total: 21.7 s\n",
-      "Wall time: 21.5 s\n"
+      "CPU times: user 22.5 s, sys: 231 ms, total: 22.7 s\n",
+      "Wall time: 22.6 s\n"
      ]
     }
    ],
@@ -294,7 +294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7216104e7ea94284a568a598d978928e",
+       "model_id": "6b90066791994b6da6d6d8fbfe60d9dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,8 +309,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min, sys: 89.8 ms, total: 1min\n",
-      "Wall time: 1min\n"
+      "CPU times: user 1min 5s, sys: 105 ms, total: 1min 5s\n",
+      "Wall time: 1min 5s\n"
      ]
     }
    ],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,14 +352,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "caa469c6330d4b6181e856351db074f3",
+       "model_id": "9d6ef058d9d14728b46cef5d6c8e7878",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,8 +374,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 6s, sys: 793 ms, total: 1min 6s\n",
-      "Wall time: 1min 6s\n"
+      "CPU times: user 1min 17s, sys: 571 ms, total: 1min 18s\n",
+      "Wall time: 1min 17s\n"
      ]
     }
    ],
@@ -393,7 +393,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07ad3d0110b5434681296b93cd147aac",
+       "model_id": "8bbb5deecef04514b329c79b2420fca7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -405,11 +405,15 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 3min 39s, sys: 686 ms, total: 3min 40s\n",
-      "Wall time: 3min 39s\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[0;32m<timed eval>:1\u001b[0m\n",
+      "File \u001b[0;32m~/github/alimanfoo/anjl/anjl/_canonical.py:71\u001b[0m, in \u001b[0;36mcanonical_nj\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;66;03m# Begin iterating.\u001b[39;00m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m iteration \u001b[38;5;129;01min\u001b[39;00m iterator:\n\u001b[1;32m     70\u001b[0m     \u001b[38;5;66;03m# Perform one iteration of the neighbour-joining algorithm.\u001b[39;00m\n\u001b[0;32m---> 71\u001b[0m     \u001b[43mcanonical_iteration\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     72\u001b[0m \u001b[43m        \u001b[49m\u001b[43miteration\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43miteration\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     73\u001b[0m \u001b[43m        \u001b[49m\u001b[43mD\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mD_copy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     74\u001b[0m \u001b[43m        \u001b[49m\u001b[43mU\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mU\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     75\u001b[0m \u001b[43m        \u001b[49m\u001b[43mindex_to_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindex_to_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     76\u001b[0m \u001b[43m        \u001b[49m\u001b[43mobsolete\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mobsolete\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     77\u001b[0m \u001b[43m        \u001b[49m\u001b[43mZ\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     78\u001b[0m \u001b[43m        \u001b[49m\u001b[43mn_original\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_original\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     79\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdisallow_negative_distances\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdisallow_negative_distances\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     80\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m Z\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
