--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.26 ms ± 205 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.17 ms ± 206 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.8 ms ± 133 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.8 ms ± 149 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.8 ms ± 970 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "35.9 ms ± 1.1 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.9 ms ± 714 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "23.8 ms ± 885 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.32 s ± 13.2 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "3.31 s ± 35.8 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.92 s ± 15.7 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "7.09 s ± 232 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
