--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -47,6 +47,37 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "933d1a80-9fbe-4373-b883-8ec3a71525a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8640710243834528"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(344783 - 338356) * 100 / 344783"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "95eeb069-16b4-4399-9b4b-3477cb4dae12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.rapid_nj(small_D);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
    "metadata": {},
    "outputs": [
@@ -54,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.17 ms ± 206 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.65 ms ± 484 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -73,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.8 ms ± 149 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.01 ms ± 304 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -92,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -102,7 +133,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +146,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "id": "a9352184-c09a-4ae3-bf1b-cc633489e34e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.843696495761524"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(3750287 - 3418623) * 100 / 3750287"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "be9b7e4e-0789-4151-a63c-4c387c85e1e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.rapid_nj(medium_D);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -123,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.9 ms ± 1.1 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "37.4 ms ± 1.46 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -142,7 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.8 ms ± 885 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "23.7 ms ± 688 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -161,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -171,7 +233,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +246,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
+   "id": "50401941-38e5-4d51-9725-12bc5bf9cfad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.814727477028054"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(681823586 - 573995044) * 100 / 681823586"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7f8c649a-1bc4-4d48-9540-acc05c25f5d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.rapid_nj(large_D);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -192,7 +285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.31 s ± 35.8 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "3.17 s ± 10 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -211,7 +304,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.09 s ± 232 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "7.54 s ± 635 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -230,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -240,7 +333,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,14 +346,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
+   "id": "caf3dd03-3c5c-40a2-8233-1be1b57cb4d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.162017539099297"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100 * (4164662664 - 3699802287) / 4164662664"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "68749be4-0049-4736-b271-642941a21e1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total_visited 3699802287\n"
+     ]
+    }
+   ],
+   "source": [
+    "anjl.rapid_nj(xl_D);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3a0a15539d742bb80db10818a70d803",
+       "model_id": "1d499e98153548eea9a6f13ff7af067c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,8 +407,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 22.5 s, sys: 231 ms, total: 22.7 s\n",
-      "Wall time: 22.6 s\n"
+      "CPU times: user 21.7 s, sys: 230 ms, total: 22 s\n",
+      "Wall time: 21.8 s\n"
      ]
     }
    ],
@@ -294,7 +426,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b90066791994b6da6d6d8fbfe60d9dd",
+       "model_id": "a13ed842f7fd4eaba9e029a9380a4731",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,11 +438,15 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1min 5s, sys: 105 ms, total: 1min 5s\n",
-      "Wall time: 1min 5s\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[0;32m<timed eval>:1\u001b[0m\n",
+      "File \u001b[0;32m~/github/alimanfoo/anjl/anjl/_canonical.py:71\u001b[0m, in \u001b[0;36mcanonical_nj\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;66;03m# Begin iterating.\u001b[39;00m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m iteration \u001b[38;5;129;01min\u001b[39;00m iterator:\n\u001b[1;32m     70\u001b[0m     \u001b[38;5;66;03m# Perform one iteration of the neighbour-joining algorithm.\u001b[39;00m\n\u001b[0;32m---> 71\u001b[0m     \u001b[43mcanonical_iteration\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     72\u001b[0m \u001b[43m        \u001b[49m\u001b[43miteration\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43miteration\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     73\u001b[0m \u001b[43m        \u001b[49m\u001b[43mD\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mD_copy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     74\u001b[0m \u001b[43m        \u001b[49m\u001b[43mU\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mU\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     75\u001b[0m \u001b[43m        \u001b[49m\u001b[43mindex_to_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindex_to_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     76\u001b[0m \u001b[43m        \u001b[49m\u001b[43mobsolete\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mobsolete\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     77\u001b[0m \u001b[43m        \u001b[49m\u001b[43mZ\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     78\u001b[0m \u001b[43m        \u001b[49m\u001b[43mn_original\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_original\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     79\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdisallow_negative_distances\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdisallow_negative_distances\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     80\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m Z\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -359,7 +495,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d6ef058d9d14728b46cef5d6c8e7878",
+       "model_id": "3556fb795d614268a1b71b28c8f89fde",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,8 +510,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 17s, sys: 571 ms, total: 1min 18s\n",
-      "Wall time: 1min 17s\n"
+      "CPU times: user 1min 15s, sys: 567 ms, total: 1min 16s\n",
+      "Wall time: 1min 15s\n"
      ]
     }
    ],
