use unsigned integers for indexing

--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.48 ms ± 356 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.33 ms ± 183 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.01 ms ± 304 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.8 ms ± 127 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.6 ms ± 1.03 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "35.5 ms ± 1.54 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.7 ms ± 688 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "23.6 ms ± 925 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.11 s ± 22.5 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "2.88 s ± 24.4 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.54 s ± 635 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "6.29 s ± 31.6 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbbbb0459b2e4e1cb0c132c2f51fd540",
+       "model_id": "a48f6c4a44f941d3943b21c6ab076fda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,8 +275,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21.1 s, sys: 252 ms, total: 21.4 s\n",
-      "Wall time: 21.3 s\n"
+      "CPU times: user 19.8 s, sys: 223 ms, total: 20 s\n",
+      "Wall time: 19.9 s\n"
      ]
     }
    ],
@@ -287,10 +287,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e1a386140c5040d1a990503afcd075fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5867 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 49 s, sys: 84 ms, total: 49.1 s\n",
+      "Wall time: 48.9 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "anjl.canonical_nj(xl_D, progress=tqdm);"
@@ -306,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -316,7 +339,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,14 +352,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4256476ed3ce43888be1d2f178adcc20",
+       "model_id": "9be8463673fa4ef687c5b23a1af97858",
        "version_major": 2,
        "version_minor": 0
       },
@@ -351,8 +374,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 11s, sys: 564 ms, total: 1min 11s\n",
-      "Wall time: 1min 11s\n"
+      "CPU times: user 1min 3s, sys: 533 ms, total: 1min 4s\n",
+      "Wall time: 1min 3s\n"
      ]
     }
    ],
