--- a/sandbox/plot.ipynb
+++ b/sandbox/plot.ipynb
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z2r = anjl.rapid_nj(D2)\n",
+    "Z2r = anjl.rapid_nj(D2, disallow_negative_distances=False)\n",
     "Z2r"
    ]
   },
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z3r = anjl.rapid_nj(D3)"
+    "Z3r = anjl.rapid_nj(D3, disallow_negative_distances=False)"
    ]
   },
   {
